[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.71"
flutter_rust_bridge = "1.77.1"
itertools = "0.10.5"
rustydav = "0.1.3"


[build-dependencies]
flutter_rust_bridge_codegen = "1.77.1"
